--- a/templates/header.html
+++ b/templates/header.html
@@ -56,11 +56,11 @@
 
                 <li><a href="{% url 'theme' %}">Themes</a></li>
 
-                <li><a href="#">Support</a></li>
+                <li><a href="{% url 'about' %}">Support</a></li>
 
-                <li><a href="#">About</a></li>
+                <li><a href="{% url 'about' %}">About</a></li>
 
-                <li><a href="#">Blog</a></li>
+                <li><a href="{% url 'blog' %}">Blog</a></li>
 
                 <li><a href="{% url 'contact' %}">Contact</a></li>
               </ul>
