--- a/templates/cart.html
+++ b/templates/cart.html
@@ -53,7 +53,7 @@
         </div>
         <div class="col-xxl-12">
           <div class="category__more mt-30 text-center">
-            <a href="" class="m-btn m-btn-2"> <span></span> Checkout</a>
+            <a href="{% url 'checkout' %}" class="m-btn m-btn-2"> <span></span> Checkout</a>
           </div>
         </div>
       </div>
