--- a/templates/theme_details.html
+++ b/templates/theme_details.html
@@ -136,7 +136,7 @@
                             <div class="product__proprietor-avater d-flex align-items-center">
                                
                                <div class="product__proprietor-price">
-                               <span class="d-flex align-items-start"><span>Rs.</span>49</span>
+                               <span class="d-flex align-items-start"><span>Rs.</span>{{theme_data.template_price}}</span>
                             </div>
                             </div>
                             
