--- a/templates/admin/add_template.html
+++ b/templates/admin/add_template.html
@@ -90,6 +90,24 @@
                   </select>
                 </div>
               </div>
+
+
+              <div class="form-group row">
+                <label class="col-sm-3 col-form-label">Tags</label>
+                <div class="col-sm-9">
+                  <select class="form-control" name="tag" id ="tag" multiple >
+                    <option value="">--Select--</option>
+                    {% for tag in tag %}
+                    <option value="{{tag.id}}">
+                      {{tag.tag}}
+                    </option>
+                    {% endfor %}
+                  </select>
+                </div>
+              </div>
+
+
+
               <div class="form-group">
                 <label for="exampleInputEmail1">Template Name</label>
                 <input
